objects/Asset.object
<CustomObject>
    <fields>
        <fullName>AccountCountryISOCode__c</fullName>
        <formula>CASE(
Text(Account.Country__c),
&quot;USA&quot;, &quot;USD&quot;,
&quot;India&quot;, &quot;INR&quot;,
&quot;Australia&quot;, &quot;AUD&quot;,
&quot;Canada&quot;, &quot;CAD&quot;,
&quot;Great Britain&quot;, &quot;GBP&quot;,
&quot;United Kingdom&quot;, &quot;GBP&quot;,
&quot;USD&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountCountryISOCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Date__c</fullName>
        <label>Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_ID__c</fullName>
        <description>Asset full length Row ID</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Name__c</fullName>
        <externalId>true</externalId>
        <label>Asset_Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CCP_End_Date__c</fullName>
        <label>CCP End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commissionable__c</fullName>
        <formula>Current_Product__r.Commissionable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commissionable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Id__c</fullName>
        <externalId>true</externalId>
        <label>Company Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_with_SKU__c</fullName>
        <formula>Company_Id__c+Online_Current_Product_SKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company with SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code_2_Digit__c</fullName>
        <description>Cross Object Formula Field</description>
        <formula>CASE(
Text(Account.Country__c),
&quot;USA&quot;, &quot;US&quot;,
&quot;India&quot;, &quot;IN&quot;,
&quot;Australia&quot;, &quot;AU&quot;,
&quot;Canada&quot;, &quot;CA&quot;,
&quot;Great Britain&quot;, &quot;GB&quot;,
&quot;United Kingdom&quot;, &quot;GB&quot;,
&quot;GB&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code 2 Digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedByNameTemp__c</fullName>
        <formula>CreatedBy.LastName + &apos; &apos;+ CreatedBy.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedByNameTemp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Number_of_Tries__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Number of Tries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Assets (Current Product)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delete_Date__c</fullName>
        <label>Delete_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Downgrade_Date__c</fullName>
        <label>Downgrade Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Failure_Date__c</fullName>
        <label>Failure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Failure_Reason__c</fullName>
        <label>Failure Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Charge_Date__c</fullName>
        <label>First Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Support_End_Date__c</fullName>
        <label>Full Support End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsResubscribeGreaterthatCancel__c</fullName>
        <description>This field is Exclusively created of the Skuid Page for the incapability to compare the two fields</description>
        <formula>ReSubscribe_Date__c &gt; Cancel_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsResubscribeGreaterthatCancel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsResubscribeGreaterthatSuspend__c</fullName>
        <description>This field is Exclusively created of the Skuid Page for the incapability to compare the two fields</description>
        <formula>ReSubscribe_Date__c &gt; Suspend_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsResubscribeGreaterthatSuspend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Login_Date__c</fullName>
        <label>Last Login Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Retry_Failure__c</fullName>
        <label>Last Payment Retry Failure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Migrate_In_Date__c</fullName>
        <label>Migrate In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Migrate_Out_Date__c</fullName>
        <label>Migrate Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Charge_Date__c</fullName>
        <label>Next Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Num_of_Invoices__c</fullName>
        <label># of Invoices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLB_Online_Banking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OLB - Online Banking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OnlineSignupDate__c</fullName>
        <formula>IF(NOT(ISNULL(Signup_Date__c)),
MID(TEXT(Signup_Date__c), IF(MID(TEXT(Signup_Date__c), 9, 1) = &quot;0&quot;, 10, 9), IF(MID(TEXT(Signup_Date__c), 9, 1) = &quot;0&quot;, 1, 2))
+&quot;-&quot;+
CASE(MID(TEXT(Signup_Date__c),6,2),
&quot;01&quot;, &quot;Jan&quot;,
&quot;02&quot;, &quot;Feb&quot;,
&quot;03&quot;, &quot;Mar&quot;,
&quot;04&quot;, &quot;Apr&quot;,
&quot;05&quot;, &quot;May&quot;,
&quot;06&quot;, &quot;Jun&quot;,
&quot;07&quot;, &quot;Jul&quot;,
&quot;08&quot;, &quot;Aug&quot;,
&quot;09&quot;, &quot;Sep&quot;,
&quot;10&quot;, &quot;Oct&quot;,
&quot;11&quot;, &quot;Nov&quot;,
&quot;12&quot;, &quot;Dec&quot;,
null)
+&quot;-&quot;+
LEFT(TEXT(Signup_Date__c),4)
,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Signup Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Cancel_Date__c</fullName>
        <formula>IF(NOT(ISNULL(Cancel_Date__c)),
MID(TEXT(Cancel_Date__c), IF(MID(TEXT(Cancel_Date__c), 9, 1) = &quot;0&quot;, 10, 9), IF(MID(TEXT(Cancel_Date__c), 9, 1) = &quot;0&quot;, 1, 2))
+&quot;-&quot;+
CASE(MID(TEXT(Cancel_Date__c),6,2),
&quot;01&quot;, &quot;Jan&quot;,
&quot;02&quot;, &quot;Feb&quot;,
&quot;03&quot;, &quot;Mar&quot;,
&quot;04&quot;, &quot;Apr&quot;,
&quot;05&quot;, &quot;May&quot;,
&quot;06&quot;, &quot;Jun&quot;,
&quot;07&quot;, &quot;Jul&quot;,
&quot;08&quot;, &quot;Aug&quot;,
&quot;09&quot;, &quot;Sep&quot;,
&quot;10&quot;, &quot;Oct&quot;,
&quot;11&quot;, &quot;Nov&quot;,
&quot;12&quot;, &quot;Dec&quot;,
null)
+&quot;-&quot;+
LEFT(TEXT(Cancel_Date__c),4)
,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Cancel Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Cancel_Reason__c</fullName>
        <label>Online Cancel Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Online_Company_ID__c</fullName>
        <formula>Account.Company_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Company ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Current_Product_Family__c</fullName>
        <formula>TEXT(Current_Product__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Current Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Current_Product_SKU__c</fullName>
        <formula>Current_Product__r.SKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Current Product SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Current_Product__c</fullName>
        <formula>IF (BEGINS(Current_Product__r.Name,&apos;QBSE&apos;),IF(Current_Product__r.Name = &apos;QBSE Trial&apos;, &apos;QBSE Trial&apos;,&apos;QBSE&apos;),Current_Product__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Current Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Expiry_Date_Calc__c</fullName>
        <formula>IF(NOT(ISNULL(Online_Expiry_Date__c)),
MID(TEXT(Online_Expiry_Date__c), IF(MID(TEXT(Online_Expiry_Date__c), 9, 1) = &quot;0&quot;, 10, 9), IF(MID(TEXT(Online_Expiry_Date__c), 9, 1) = &quot;0&quot;, 1, 2))
+&quot;-&quot;+
CASE(MID(TEXT(Online_Expiry_Date__c),6,2),
&quot;01&quot;, &quot;Jan&quot;,
&quot;02&quot;, &quot;Feb&quot;,
&quot;03&quot;, &quot;Mar&quot;,
&quot;04&quot;, &quot;Apr&quot;,
&quot;05&quot;, &quot;May&quot;,
&quot;06&quot;, &quot;Jun&quot;,
&quot;07&quot;, &quot;Jul&quot;,
&quot;08&quot;, &quot;Aug&quot;,
&quot;09&quot;, &quot;Sep&quot;,
&quot;10&quot;, &quot;Oct&quot;,
&quot;11&quot;, &quot;Nov&quot;,
&quot;12&quot;, &quot;Dec&quot;,
null)
+&quot;-&quot;+
LEFT(TEXT(Online_Expiry_Date__c),4)
,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Expiry Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Online_First_Charge_Date__c</fullName>
        <formula>IF(NOT(ISNULL(First_Charge_Date__c)),
MID(TEXT(First_Charge_Date__c), IF(MID(TEXT(First_Charge_Date__c), 9, 1) = &quot;0&quot;, 10, 9), IF(MID(TEXT(First_Charge_Date__c), 9, 1) = &quot;0&quot;, 1, 2))
+&quot;-&quot;+
CASE(MID(TEXT(First_Charge_Date__c),6,2),
&quot;01&quot;, &quot;Jan&quot;,
&quot;02&quot;, &quot;Feb&quot;,
&quot;03&quot;, &quot;Mar&quot;,
&quot;04&quot;, &quot;Apr&quot;,
&quot;05&quot;, &quot;May&quot;,
&quot;06&quot;, &quot;Jun&quot;,
&quot;07&quot;, &quot;Jul&quot;,
&quot;08&quot;, &quot;Aug&quot;,
&quot;09&quot;, &quot;Sep&quot;,
&quot;10&quot;, &quot;Oct&quot;,
&quot;11&quot;, &quot;Nov&quot;,
&quot;12&quot;, &quot;Dec&quot;,
null)
+&quot;-&quot;+
LEFT(TEXT(First_Charge_Date__c),4)
,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online First Charge Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_GNS_Date__c</fullName>
        <description>This date will reflect the GNS date for WSB assets for all countries as the signup date, and for all other QBO assets as the First Charge Date.</description>
        <inlineHelpText>This date will reflect the GNS date for WSB assets for all countries as the signup date, and for all other QBO assets as the First Charge Date.</inlineHelpText>
        <label>Online_GNS_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Online_Last_Login_Date__c</fullName>
        <formula>IF(NOT(ISNULL(Last_Login_Date__c)),
MID(TEXT(Last_Login_Date__c), IF(MID(TEXT(Last_Login_Date__c), 9, 1) = &quot;0&quot;, 10, 9), IF(MID(TEXT(Last_Login_Date__c), 9, 1) = &quot;0&quot;, 1, 2))
+&quot;-&quot;+
CASE(MID(TEXT(Last_Login_Date__c),6,2),
&quot;01&quot;, &quot;Jan&quot;,
&quot;02&quot;, &quot;Feb&quot;,
&quot;03&quot;, &quot;Mar&quot;,
&quot;04&quot;, &quot;Apr&quot;,
&quot;05&quot;, &quot;May&quot;,
&quot;06&quot;, &quot;Jun&quot;,
&quot;07&quot;, &quot;Jul&quot;,
&quot;08&quot;, &quot;Aug&quot;,
&quot;09&quot;, &quot;Sep&quot;,
&quot;10&quot;, &quot;Oct&quot;,
&quot;11&quot;, &quot;Nov&quot;,
&quot;12&quot;, &quot;Dec&quot;,
null)
+&quot;-&quot;+
LEFT(TEXT(Last_Login_Date__c),4)
,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Last Login Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Last_Updated_Time__c</fullName>
        <description>Online Last Updated Time in milli seconds</description>
        <label>Online Last Updated Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Next_Charge_Date__c</fullName>
        <formula>IF(NOT(ISNULL(Next_Charge_Date__c)),
MID(TEXT(Next_Charge_Date__c), IF(MID(TEXT(Next_Charge_Date__c), 9, 1) = &quot;0&quot;, 10, 9), IF(MID(TEXT(Next_Charge_Date__c), 9, 1) = &quot;0&quot;, 1, 2))
+&quot;-&quot;+
CASE(MID(TEXT(Next_Charge_Date__c),6,2),
&quot;01&quot;, &quot;Jan&quot;,
&quot;02&quot;, &quot;Feb&quot;,
&quot;03&quot;, &quot;Mar&quot;,
&quot;04&quot;, &quot;Apr&quot;,
&quot;05&quot;, &quot;May&quot;,
&quot;06&quot;, &quot;Jun&quot;,
&quot;07&quot;, &quot;Jul&quot;,
&quot;08&quot;, &quot;Aug&quot;,
&quot;09&quot;, &quot;Sep&quot;,
&quot;10&quot;, &quot;Oct&quot;,
&quot;11&quot;, &quot;Nov&quot;,
&quot;12&quot;, &quot;Dec&quot;,
null)
+&quot;-&quot;+
LEFT(TEXT(Next_Charge_Date__c),4)
,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Next Charge Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Offer_Code__c</fullName>
        <label>Online Offer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Original_Product_SKU__c</fullName>
        <formula>Original_Product__r.SKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Original Product SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Original_Product__c</fullName>
        <formula>IF (BEGINS(Original_Product__r.Name,&apos;QBSE&apos;),IF(Original_Product__r.Name = &apos;QBSE Trial&apos;, &apos;QBSE Trial&apos;,&apos;QBSE&apos;),Original_Product__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Original Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Online_Parent</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Online_parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Online_Payment_Setup_Date__c</fullName>
        <formula>IF(NOT(ISNULL(Payment_Setup_Date__c)),
MID(TEXT(Payment_Setup_Date__c), IF(MID(TEXT(Payment_Setup_Date__c), 9, 1) = &quot;0&quot;, 10, 9), IF(MID(TEXT(Payment_Setup_Date__c), 9, 1) = &quot;0&quot;, 1, 2))
+&quot;-&quot;+
CASE(MID(TEXT(Payment_Setup_Date__c),6,2),
&quot;01&quot;, &quot;Jan&quot;,
&quot;02&quot;, &quot;Feb&quot;,
&quot;03&quot;, &quot;Mar&quot;,
&quot;04&quot;, &quot;Apr&quot;,
&quot;05&quot;, &quot;May&quot;,
&quot;06&quot;, &quot;Jun&quot;,
&quot;07&quot;, &quot;Jul&quot;,
&quot;08&quot;, &quot;Aug&quot;,
&quot;09&quot;, &quot;Sep&quot;,
&quot;10&quot;, &quot;Oct&quot;,
&quot;11&quot;, &quot;Nov&quot;,
&quot;12&quot;, &quot;Dec&quot;,
null)
+&quot;-&quot;+
LEFT(TEXT(Payment_Setup_Date__c),4)
,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Payment Setup Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Suspend_Date__c</fullName>
        <formula>IF(NOT(ISNULL(Suspend_Date__c)),
MID(TEXT(Suspend_Date__c), IF(MID(TEXT(Suspend_Date__c), 9, 1) = &quot;0&quot;, 10, 9), IF(MID(TEXT(Suspend_Date__c), 9, 1) = &quot;0&quot;, 1, 2))
+&quot;-&quot;+
CASE(MID(TEXT(Suspend_Date__c),6,2),
&quot;01&quot;, &quot;Jan&quot;,
&quot;02&quot;, &quot;Feb&quot;,
&quot;03&quot;, &quot;Mar&quot;,
&quot;04&quot;, &quot;Apr&quot;,
&quot;05&quot;, &quot;May&quot;,
&quot;06&quot;, &quot;Jun&quot;,
&quot;07&quot;, &quot;Jul&quot;,
&quot;08&quot;, &quot;Aug&quot;,
&quot;09&quot;, &quot;Sep&quot;,
&quot;10&quot;, &quot;Oct&quot;,
&quot;11&quot;, &quot;Nov&quot;,
&quot;12&quot;, &quot;Dec&quot;,
null)
+&quot;-&quot;+
LEFT(TEXT(Suspend_Date__c),4)
,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Suspend Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Trail_End_Date__c</fullName>
        <formula>IF(NOT(ISNULL(Trial_End_Date__c)),
MID(TEXT(Trial_End_Date__c), IF(MID(TEXT(Trial_End_Date__c), 9, 1) = &quot;0&quot;, 10, 9), IF(MID(TEXT(Trial_End_Date__c), 9, 1) = &quot;0&quot;, 1, 2))
+&quot;-&quot;+
CASE(MID(TEXT(Trial_End_Date__c),6,2),
&quot;01&quot;, &quot;Jan&quot;,
&quot;02&quot;, &quot;Feb&quot;,
&quot;03&quot;, &quot;Mar&quot;,
&quot;04&quot;, &quot;Apr&quot;,
&quot;05&quot;, &quot;May&quot;,
&quot;06&quot;, &quot;Jun&quot;,
&quot;07&quot;, &quot;Jul&quot;,
&quot;08&quot;, &quot;Aug&quot;,
&quot;09&quot;, &quot;Sep&quot;,
&quot;10&quot;, &quot;Oct&quot;,
&quot;11&quot;, &quot;Nov&quot;,
&quot;12&quot;, &quot;Dec&quot;,
null)
+&quot;-&quot;+
LEFT(TEXT(Trial_End_Date__c),4)
,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Trail End Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Updated_Date__c</fullName>
        <label>Online Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Optout_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This value is set to false when user opts In , and set to true when cancel optin event occurs.</description>
        <label>Optout Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Assets(Original Product)</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <description>Partner Name</description>
        <label>Partner Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Setup_Date__c</fullName>
        <label>Payment Setup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payroll_Company_Id__c</fullName>
        <label>Payroll Company Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <label>Plan Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Contract_Support__c</fullName>
        <formula>if(
Siebel_Status_Code__c=&apos;Active&apos;,
if(AND(Product2.Siebel_Price_Type__c = &apos;Recurring&apos;,OR(DateValue(Siebel_Service_End_Date__c) &gt; TODAY(), ISNULL(Siebel_Service_End_Date__c)),TEXT(Product2.Support_Category__c) = &apos;Beta Support&apos;),&apos;Beta Support&apos;,
if(AND(Product2.Siebel_Price_Type__c = &apos;Recurring&apos;,OR(DateValue(Siebel_Service_End_Date__c) &gt; TODAY(), ISNULL(Siebel_Service_End_Date__c)),TEXT(Product2.Support_Category__c) = &apos;Support Plan&apos;),&apos;Full Support&apos;,
if(AND(Product2.Siebel_Price_Type__c = &apos;One-Time&apos;,DateValue(CCP_End_Date__c) &gt; TODAY(), TEXT(Product2.Support_Category__c) = &apos;CCP&apos;),&apos;CCP Support&apos;,
if(AND(Product2.Siebel_Price_Type__c = &apos;One-Time&apos;,DateValue(Full_Support_End_Date__c) &gt; TODAY(),TEXT(Product2.Support_Category__c) = &apos;3 Year Support Plan&apos;),&apos;Full Support&apos;,
if(AND(Product2.Siebel_Price_Type__c = &apos;One-Time&apos;,DateValue(Full_Support_End_Date__c) &gt; TODAY(), TEXT(Product2.Support_Category__c) = &apos;1 Year Support Plan&apos;),&apos;Full Support&apos;,
if(AND(Product2.Siebel_Price_Type__c = &apos;One-Time&apos;,DateValue(Full_Support_End_Date__c) &gt; TODAY(), TEXT(Product2.Support_Category__c) = &apos;30 Day Support Plan + CCP&apos;),&apos;Full Support&apos;,
if(AND(Product2.Siebel_Price_Type__c = &apos;One-Time&apos;,DateValue(CCP_End_Date__c) &gt; TODAY(), TEXT(Product2.Support_Category__c) = &apos;30 Day Support Plan + CCP&apos;),&apos;CCP Support&apos;,
if(AND(Product2.Siebel_Price_Type__c = &apos;One-Time&apos;,DateValue(CCP_End_Date__c) &gt; TODAY(), TEXT(Product2.Support_Category__c) = &apos;Setup Support Plan + CCP&apos;),&apos;Setup Support + CCP&apos;,
if(AND(Product2.Siebel_Price_Type__c = &apos;One-Time&apos;,DateValue(Full_Support_End_Date__c) &gt; TODAY(), TEXT(Product2.Support_Category__c) = &apos;90 Day Support Plan + CCP&apos;),&apos;Full Support&apos;,
if(AND(Product2.Siebel_Price_Type__c = &apos;One-Time&apos;,DateValue(CCP_End_Date__c) &gt; TODAY(), TEXT(Product2.Support_Category__c) = &apos;90 Day Support Plan + CCP&apos;),&apos;CCP Support&apos;,&apos;NOT APPLICABLE&apos;)))))))))),&apos;NOT APPLICABLE&apos;)</formula>
        <label>Post Contract Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This determines if the Asset is primary in the bundle. Valid for online assets only</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductOnAssetLU__c</fullName>
        <formula>Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family_of_Interest__c</fullName>
        <label>Product Family of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assisted Payroll</fullName>
                </value>
                <value>
                    <fullName>Checks/Supplies</fullName>
                </value>
                <value>
                    <fullName>DIY Payroll</fullName>
                </value>
                <value>
                    <fullName>Hosting</fullName>
                </value>
                <value>
                    <fullName>Intuit Care Plans</fullName>
                </value>
                <value>
                    <fullName>Intuit Care Plans for QB Prior to 2011</fullName>
                </value>
                <value>
                    <fullName>Intuit Full Service Payroll (IFSP)</fullName>
                </value>
                <value>
                    <fullName>Intuit Online Payroll (IOP)</fullName>
                </value>
                <value>
                    <fullName>Intuit Partner Platform</fullName>
                </value>
                <value>
                    <fullName>Merchant Account Services</fullName>
                </value>
                <value>
                    <fullName>Pro Advisor</fullName>
                </value>
                <value>
                    <fullName>ProTax - Lacerte</fullName>
                </value>
                <value>
                    <fullName>Pro Tax Other</fullName>
                </value>
                <value>
                    <fullName>ProTax - ProSeries</fullName>
                </value>
                <value>
                    <fullName>QB Accountants Edition</fullName>
                </value>
                <value>
                    <fullName>QB Connected Services</fullName>
                </value>
                <value>
                    <fullName>QB Enterprise Solutions (QBES)</fullName>
                </value>
                <value>
                    <fullName>QB Mac</fullName>
                </value>
                <value>
                    <fullName>QB Point-of-Sale (POS)</fullName>
                </value>
                <value>
                    <fullName>QB Pro/Premier</fullName>
                </value>
                <value>
                    <fullName>QuickBase</fullName>
                </value>
                <value>
                    <fullName>QuickBooks Online (QBO)</fullName>
                </value>
                <value>
                    <fullName>SalesForce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id, Product2.Name,&quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_First_Charge_Date__c</fullName>
        <description>Stores Projected First Charge Date of an asset.</description>
        <label>Projected First Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReSubscribe_Date__c</fullName>
        <label>ReSubscribe Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Company_Id__c</fullName>
        <label>Related_Company_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Setup_Support_End_Date__c</fullName>
        <label>Setup Support End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Siebel_Activation_Date_Formula__c</fullName>
        <formula>IF(NOT(ISNULL(Siebel_Activation_Date__c)),
MID(TEXT(Siebel_Activation_Date__c), IF(MID(TEXT(Siebel_Activation_Date__c), 9, 1) = &quot;0&quot;, 10, 9), IF(MID(TEXT(Siebel_Activation_Date__c), 9, 1) = &quot;0&quot;, 1, 2))
+&quot;-&quot;+
CASE(MID(TEXT(Siebel_Activation_Date__c),6,2),
&quot;01&quot;, &quot;Jan&quot;,
&quot;02&quot;, &quot;Feb&quot;,
&quot;03&quot;, &quot;Mar&quot;,
&quot;04&quot;, &quot;Apr&quot;,
&quot;05&quot;, &quot;May&quot;,
&quot;06&quot;, &quot;Jun&quot;,
&quot;07&quot;, &quot;Jul&quot;,
&quot;08&quot;, &quot;Aug&quot;,
&quot;09&quot;, &quot;Sep&quot;,
&quot;10&quot;, &quot;Oct&quot;,
&quot;11&quot;, &quot;Nov&quot;,
&quot;12&quot;, &quot;Dec&quot;,
null)
+&quot;-&quot;+
LEFT(TEXT(Siebel_Activation_Date__c),4)
,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Siebel Activation Date Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Activation_Date__c</fullName>
        <description>Siebel Activation Date</description>
        <label>Siebel Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Siebel_Assembly_Port_ID__c</fullName>
        <description>Siebel Assembly Port ID</description>
        <label>Siebel Assembly Port ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Asset_Number__c</fullName>
        <description>Siebel Asset Number</description>
        <label>Siebel Asset Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Billing_Account_CAN__c</fullName>
        <description>Siebel Billing Account CAN</description>
        <label>Siebel Billing Account CAN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Billing_Account_ID__c</fullName>
        <description>Siebel Billing Account ID</description>
        <label>Siebel Billing Account ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Billing_Account_Name__c</fullName>
        <description>Siebel Billing Account Name</description>
        <label>Siebel Billing Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Billing_Day_Of_Month__c</fullName>
        <description>Siebel Billing Day Of Month</description>
        <label>Siebel Billing Day Of Month</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Siebel_Billing_Profile_Name__c</fullName>
        <description>Siebel Billing Profile Name</description>
        <label>Siebel Billing Profile Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Commit_Date__c</fullName>
        <description>Siebel Commit Date</description>
        <label>Siebel Commit_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Siebel_Commit_End_Date__c</fullName>
        <description>Siebel Commit End Date</description>
        <label>Siebel Commit End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Siebel_Configuration__c</fullName>
        <description>Siebel Configuration</description>
        <label>Configuration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Siebel_Created_By_ID__c</fullName>
        <description>Siebel Created By ID</description>
        <label>Siebel Created By ID</label>
        <length>101</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Created_Date__c</fullName>
        <description>Siebel Created Date</description>
        <label>Siebel Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Siebel_Credit_Card_Expiration_Month__c</fullName>
        <description>Siebel Credit Card Expiration Month</description>
        <label>Siebel Credit Card Expiration Month</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Credit_Card_Expiration_Year__c</fullName>
        <description>Siebel Credit Card Expiration Year</description>
        <label>Siebel Credit Card Expiration Year</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Credit_Card_Name__c</fullName>
        <description>Name on Credit Card</description>
        <label>Siebel Credit Card Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Credit_Card_Num_Masked__c</fullName>
        <description>Siebel Credit Card Number</description>
        <label>Siebel Credit Card Num Masked</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Credit_Card_Type__c</fullName>
        <description>Siebel Credit Card Type</description>
        <label>Siebel Credit Card Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_EFT_Bank_Account_Name__c</fullName>
        <description>Siebel EFT Bank Account Name</description>
        <label>Siebel EFT Bank Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_EFT_Bank_Account_Num_Masked__c</fullName>
        <description>Siebel EFT Bank Account Number</description>
        <label>Siebel EFT Bank Account Num Masked</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_EFT_Bank_Account_Type__c</fullName>
        <description>Siebel Bank Account Type</description>
        <label>Siebel EFT Bank Account Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_EFT_Payment_Term__c</fullName>
        <description>Siebel EFT Payment Term</description>
        <label>Siebel EFT Payment Term</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Entitlement_Offering_Code__c</fullName>
        <description>Siebel Entitlement Offering Code</description>
        <label>Siebel Entitlement Offering Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Install_Date__c</fullName>
        <description>Siebel Install Date</description>
        <label>Siebel Install Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Siebel_Integration_ID__c</fullName>
        <description>Siebel Integration ID</description>
        <label>Siebel Integration ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Last_Updated_By_ID__c</fullName>
        <description>Siebel Last Updated By ID</description>
        <label>Siebel Last Updated By ID</label>
        <length>101</length>
        <type>Text</type>
    </fields>
</CustomObject>